examples/test/testpolicy7778.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7778
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key16: value24
      key39: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value0
      podSelector:
        matchLabels:
          key31: value47
          key49: value35
          key43: value13
